# python-speechd

./: .gitignore  README.md  pyproject.toml
src/speechd/: __init__.py  client.py
